adapt docker image for arm

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,18 +3,18 @@ WORKDIR /app
 ENV LANG=en_US.UTF-8
 ENV JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8
 ENV ANT_OPTS=-Dfile.encoding=UTF8
-RUN apt-get update && apt-get -y install cmake git gcc clang openjdk-11-jdk ant
+RUN apt-get update && apt-get -y install cmake git gcc g++ openjdk-11-jdk ant
 RUN git clone -b hmc-clock --depth 1 https://github.com/beast-dev/beast-mcmc.git && \
 cd beast-mcmc && \
 git checkout 3a14740bdb39f7249e387785e689fbda6ba758c2 && \
-ant && \
-cd /app && \
+ant
+RUN cd /app && \
 git clone -b hmc-clock --depth 1 https://github.com/beagle-dev/beagle-lib.git && \
 cd beagle-lib && \
-git checkout 1b31012fb1a7823d51f15ecfc9ad6892fd25469b && \
+git checkout 3bdb30bd645e15983f8c8cf952564813e306ad83 && \
 mkdir build && \
 cd build && \
-cmake -DBUILD_CUDA=OFF -DBUILD_OPENCL=OFF -DBUILD_OPENMP=OFF -D CMAKE_CXX_FLAGS=-DHAVE_CPUID_H .. && \
+cmake -DBUILD_CUDA=OFF -DBUILD_OPENCL=OFF -DBUILD_OPENMP=OFF -DBUILD_SSE=OFF .. && \
 make install && \
 apt-get autoremove && apt-get autoclean
 ENV LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
